--- a/res/layout/fragment_tabbed_fragment_contacts.xml
+++ b/res/layout/fragment_tabbed_fragment_contacts.xml
@@ -1,15 +1,39 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<?xml version="1.0" encoding="utf-8"?>
+<!--<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
+    <!--xmlns:tools="http://schemas.android.com/tools"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="match_parent">-->
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Tab 2"
-        android:layout_centerInParent="true"
-        android:textSize="30dp"
-        />
+    <!--&lt;!&ndash; TODO: Update blank fragment layout &ndash;&gt;-->
+    <!--<TextView-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:text="Tab 2"-->
+        <!--android:layout_centerInParent="true"-->
+        <!--android:textSize="30dp"-->
+        <!--/>-->
 
-</RelativeLayout>
+<!--</RelativeLayout>-->
+<LinearLayout android:layout_gravity="center"
+    android:layout_height="fill_parent"
+    android:layout_width="fill_parent"
+    android:orientation="vertical"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <org.thoughtcrime.securesms.components.ContactFilterToolbar
+        android:id="@+id/contactFragmentToolbar"
+        android:layout_height="?attr/actionBarSize"
+        android:layout_width="match_parent"
+        android:minHeight="?attr/actionBarSize"
+        android:background="?attr/colorPrimary"
+        android:elevation="4dp"
+        android:theme="?attr/actionBarStyle"
+        app:contentInsetStartWithNavigation="0dp"/>
+
+    <fragment android:id="@+id/contact_selection_list_fragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:name="org.thoughtcrime.securesms.ContactSelectionListFragment" />
+
+</LinearLayout>
