--- a/res/layout/activity_tabbed_container.xml
+++ b/res/layout/activity_tabbed_container.xml
@@ -30,7 +30,8 @@
         android:layout_height="wrap_content"
         android:id="@+id/tablayout"
         android:background="@color/textsecure_primary"
-        android:minHeight="?attr/actionBarSize">
+        android:minHeight="?attr/actionBarSize"
+        app:tabTextColor="@color/colorText">
 
     </android.support.design.widget.TabLayout>
 
